#OP_ESDH-46 Changes to Case Overview. Fix for "The information in "sagsinfo" needs to be aligned".

--- a/openesdh-share/src/main/amp/web/js/openesdh/pages/case/widgets/css/DocInfoWidget.css
+++ b/openesdh-share/src/main/amp/web/js/openesdh/pages/case/widgets/css/DocInfoWidget.css
@@ -6,3 +6,8 @@
     font-size: 1em;
     margin: 0 0.3em 0 0.3em;
 }
+
+.case-info-widget .alfresco-renderers-Property .inner .label{
+	display: inline-block;
+	width: 120px;
+}
